# Rust-Tutorial

./: .env  Cargo.toml  PATCH_API_IMPLEMENTATION.md  PERMISSION_SYSTEM_SUMMARY.md  README.md  ROUTE_STRUCTURE.md  TESTING.md  check_roles.sh  fix_permissions_migration.sql  run_all_tests.sh  setup_contact_custom_fields.sh  test_contact_api.sh  test_contact_custom_fields.sh  test_owner_field.sh  test_permissions.sh
docs/: crm_schema.md  database_schema.md
migrations/: 001_create_tables.sql  001_create_users_table.sql  002_create_user_organizations_table.sql  002_seed_data.sql  003_create_crm_tables.sql  004_crm_sample_data.sql
src/: database.rs  lib.rs  main.rs
src/config/: mod.rs  server.rs
src/controllers/: contact_controller.rs  contact_filter_controller.rs  custom_field_controller.rs  mod.rs  organization_controller.rs  user_controller.rs  user_organization_controller.rs
src/database/: migrations.rs
src/dto/: contact_dto.rs  contact_filter_dto.rs  custom_field_dto.rs  mod.rs  organization_dto.rs  (+3 more)
tests/: README.md  run_all_contact_tests.sh  run_all_contact_update_tests.sh  run_all_filter_tests.sh  test_contact_crud_basic.sh  test_contact_delete.sh  test_contact_filter_advanced.sh  test_contact_filter_basic.sh  test_contact_filter_comprehensive.sh  test_contact_patch.sh  test_contact_patch_custom_fields.sh  test_contact_update.sh  test_contact_update_clear_fields.sh  test_contact_update_custom_fields.sh  test_contact_update_final.sh  test_contact_update_null_values.sh  test_contact_update_validation.sh  test_health_check.sh  test_put_vs_patch_comparison.sh
(+42 files in other folders)
